fix backdrop stretch

--- a/src/routes/RootLayout/guest-list/GuestList.module.scss
+++ b/src/routes/RootLayout/guest-list/GuestList.module.scss
@@ -40,7 +40,7 @@
 }
 
 .backdrop {
-  position: absolute;
+  position: fixed;
   inset: 0;
   height: 100%;
   width: 100%;
